// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserConnectionsEmpty - Snapshots > matches snapshot with ReactNode description 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <img
    alt="Empty state"
    class="pointer-events-none object-contain object-center"
    data-testid="background-image"
    src="/images/followers-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      class="size-12 text-brand"
      data-stroke-width="1.5"
      data-testid="user-round-plus-icon"
    >
      UserRoundPlus
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="pb-6 text-center leading-8 font-bold"
      data-testid="typography"
    >
      Test Title
    </h3>
    <p>
      First paragraph
    </p>
    <p>
      Second paragraph
    </p>
  </div>
</div>
`;

exports[`UserConnectionsEmpty - Snapshots > matches snapshot with action buttons 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <img
    alt="Empty state"
    class="pointer-events-none object-contain object-center"
    data-testid="background-image"
    src="/images/followers-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      class="size-12 text-brand"
      data-stroke-width="1.5"
      data-testid="user-round-plus-icon"
    >
      UserRoundPlus
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="pb-6 text-center leading-8 font-bold"
      data-testid="typography"
    >
      Test Title
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Test description
    </p>
  </div>
  <div
    class="relative z-10 flex flex-col items-center justify-center gap-3 lg:flex-row"
    data-testid="container"
  >
    <button
      class="h-10 gap-2 px-4"
      data-size="sm"
      data-testid="button"
      data-variant="secondary"
    >
      <svg
        class="size-4"
        data-testid="user-round-plus-icon"
      >
        UserRoundPlus
      </svg>
      <span>
        Who to Follow
      </span>
    </button>
    <button
      class="h-10 gap-2 px-4"
      data-size="sm"
      data-testid="button"
      data-variant="secondary"
    >
      <svg
        class="size-4"
        data-testid="user-round-plus-icon"
      >
        UserRoundPlus
      </svg>
      <span>
        Popular Users
      </span>
    </button>
  </div>
</div>
`;

exports[`UserConnectionsEmpty - Snapshots > matches snapshot with string description 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <img
    alt="Empty state"
    class="pointer-events-none object-contain object-center"
    data-testid="background-image"
    src="/images/followers-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      class="size-12 text-brand"
      data-stroke-width="1.5"
      data-testid="user-round-plus-icon"
    >
      UserRoundPlus
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="pb-6 text-center leading-8 font-bold"
      data-testid="typography"
    >
      Test Title
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Test description
    </p>
  </div>
</div>
`;

exports[`UserConnectionsEmpty - Snapshots > matches snapshot without action buttons 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <img
    alt="Empty state"
    class="pointer-events-none object-contain object-center"
    data-testid="background-image"
    src="/images/followers-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      class="size-12 text-brand"
      data-stroke-width="1.5"
      data-testid="user-round-plus-icon"
    >
      UserRoundPlus
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="pb-6 text-center leading-8 font-bold"
      data-testid="typography"
    >
      Test Title
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Test description
    </p>
  </div>
</div>
`;
